[package]
name = "racing-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
ash = "0.37.0"
ash-window = "0.10.0"
winit = "0.26"

[features]
validation = []
